--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "myapp",
-  "license": "0BSD",
+  "name": "mathlearningapp",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,12 +10,22 @@
   },
   "dependencies": {
     "expo": "~53.0.11",
+    "expo-av": "^15.1.6",
+    "expo-localization": "^16.1.5",
     "expo-status-bar": "~2.2.3",
+    "i18next": "^25.2.1",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-i18next": "^15.5.3",
+    "react-native": "0.79.3",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-svg": "^15.11.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.4.17"
   },
   "private": true
 }
